--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TOKEN=MTIwMDUwOTgwMTU1MDA2MTU3OA.GNGWj2.qjMzgJr0bDm8DCsofTBrfSmj5gLOEhkRf8TpNo
-CLIENT_ID=1200509801550061578
-GUILD_ID=744220593309614150
+TOKEN=TOKEN
+CLIENT_ID=CLIENT
+GUILD_ID=GUILD
