--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "name": "bot-discord",
   "version": "1.0.0",
-  "description": "bot para o discord",
+  "description": "bot2discord",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
